# MATH-458_PCSC

./: CMakeLists.txt
exercises_pdfs/exo-gdb-sources/: CMakeLists.txt
lectures/: CMakeLists.txt
lectures/week3/code_snippets/: pointers.cpp
lectures/week4/code_snippets/: block_scope.cpp  function_pointer.cpp  gdb_compare_reference_with_pointers.cpp  recursive_function.cpp  right_references.cpp  temporary_value_references.cpp  usage_of_references.cpp  using_calculate_minimum.cpp
lectures/week5/code_snippets/: abstract_class.hh  animal.hh  calling_mother.hh  cat_dog.hh  class.cpp  friend_class.cpp  friend_function.cpp  operator.cpp  override.hpp  planet.cpp  planet2.cpp  planet3.cpp  private_inheritance.hh  this.cpp  type_casting.cpp
lectures/week6/code_snippets/: arithmetic_series.cpp  arithmetic_series_meta_programming.cpp  get_maximum.cpp  maps.cpp  pair.cpp  pair_implem.cpp  scalar_product.cpp  specialization_vector.cpp  tuple.cpp  tuple_auto.cpp  variadic_template.cpp  (+1 more)
solutions/: CMakeLists.txt
solutions/chapter-04/: ch-04-ex-01-solution.cpp  ch-04-ex-02-solution.cpp  ch-04-ex-03-solution.cpp  ch-04-ex-04-solution.cpp
solutions/chapter-05/: ArrayUtil.cpp  ArrayUtil.hpp  Gauss.cpp  Gauss.hpp  ch-05-FunctionOverloading.cpp  ch-05-ex-01-solution.cpp  ch-05-ex-02-solution.cpp  ch-05-ex-03-solution.cpp  ch-05-ex-04-solution.cpp  ch-05-ex-05-solution.cpp  ch-05-ex-06-solution.cpp  ch-05-ex-07-solution.cpp  ch-05-ex-08-solution.cpp  ch-05-ex-10-solution.cpp
solutions/chapter-06/: ComplexMatrix3x3.cpp  ComplexMatrix3x3.hpp  ComplexNumber.cpp  ComplexNumber.hpp  DoubleMatrix2x2.hpp  ch-06-ex-01-solution.cpp  ch-06-ex-02-solution.cpp  test_complex_numbers.cpp
solutions/chapter-07/: GraduateStudent.cpp  GraduateStudent.hpp  PhDStudent.cpp  PhDStudent.hpp  Student.cpp  Student.hpp  ch-07-ex-01-solution.cpp  ch-07-ex-03-solution.cpp
solutions/chapter-08/: CMakeLists.txt  ComplexNumber.cpp  ComplexNumber.hpp  Point2d.cpp  Point2d.hpp  a.out  ch-08-ex-01-solution.cpp  ch-08-ex-02-solution.cpp  ch-08-ex-03-solution.cpp  ch-08-ex-04-solution.cpp  exo-templates-solution.cpp
solutions/debugging-exercise/: CMakeLists.txt  alloc.cc  check_prime.cc  main_prime.cc
work/: Hello_World.cpp
work/Chapter 1/: 2_vectors.cpp  4_Matrices.cpp  Average.cpp  CMakeLists.txt  Hello_World.cpp  Multiply_2_scalars.cpp  User_name.cpp
work/Chapter 2/: CMakeLists.txt  Matrix_Inverse.cpp  Newton_Raphson.cpp  Vector_Matrix_Operations.cpp  first_if.cpp  first_if_else.cpp  second_if_else.cpp  sum_integers.cpp
work/Chapter 3/: 3.1_Write_Files.cpp  3.2_Read_Files.cpp  3.3_Euler_Scheme.cpp  CMakeLists.txt
work/Chapter 4/: 4.1_pointers.cpp  4.2_pointers.cpp  4.3_pointers_vectors.cpp  4.4_pointers_matrices.cpp  4.5_smart_pointers.cpp  CMakeLists.txt
work/Chapter 5/: 5.1_first_function.cpp  5.2_second_function.cpp  5.3_third_function.cpp  5.4_mean_std.cpp  5.5(6)_Multiplication.cpp  5.7_norm.cpp  5.8_determinant.cpp  CMakeLists.txt
