include_directories(${CMAKE_CURRENT_SOURCE_DIR})

add_subdirectory(chapter-01)
add_subdirectory(chapter-02)
add_subdirectory(chapter-03)
add_subdirectory(chapter-04)
add_subdirectory(debugging-exercise)
add_subdirectory(chapter-05)
add_subdirectory(chapter-06)
add_subdirectory(chapter-07)
add_subdirectory(chapter-08)
