include_directories(".")

# The next lines represent a list of all the executables in the folder (chapter)
# There is typically one executable per exercise.
# As you solve exercises, you need to add them here.
# The syntax is add_executable(executable_name source_file_name

add_executable(4.1_pointers 4.1_pointers.cpp)
add_executable(4.2_pointers 4.2_pointers.cpp)
add_executable(4.3_pointers_vectors 4.3_pointers_vectors.cpp)
add_executable(4.4_pointers_vectors 4.4_pointers_matrices.cpp)
add_executable(4.5_smart_pointers 4.5_smart_pointers.cpp)
